--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,6 +26,9 @@ jobs:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
 
+    - name: 🔧 Rendre mvnw exécutable
+      run: chmod +x mvnw
+
     - name: 🧪 Build du projet avec Maven
       run: ./mvnw clean package -DskipTests
 
@@ -44,4 +47,3 @@ jobs:
 
     - name: 📦 Push vers Docker Hub
       run: docker push $IMAGE_NAME:latest
-
