--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,14 +41,14 @@ jobs:
     - name: 🛠️ Build de l’image Docker
       run: docker build -t $IMAGE_NAME:latest .
     - name: 🔍 Scan de sécurité avec Trivy
-      uses: aquasecurity/trivy-action@master
-      with:
-      image-ref: ${{ env.IMAGE_NAME }}:latest
-      format: 'table'
-      # exit-code: '1'   # <-- commenter ou supprimer cette ligne pour ne pas faire échouer le job
-      ignore-unfixed: true
-      vuln-type: 'os,library'
-      severity: 'HIGH,CRITICAL'
+  uses: aquasecurity/trivy-action@master
+  with:
+    image-ref: ${{ env.IMAGE_NAME }}:latest
+    format: table
+    # exit-code: '1'    # commentaire pour désactiver l’échec du job si vulnérabilités détectées
+    ignore-unfixed: true
+    vuln-type: os,library
+    severity: HIGH,CRITICAL
 
     - name: 📦 Push vers Docker Hub
       run: docker push $IMAGE_NAME:latest
