Update20 ci.yml

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,14 +43,16 @@ jobs:
     
     - name: 🔍 Scan de sécurité avec Trivy
       uses: aquasecurity/trivy-action@master
-       with:
-       image-ref: ${{ env.IMAGE_NAME }}:latest
-       format: 'table'
-       # exit-code: '1'
-       ignore-unfixed: true
-       vuln-type: 'os,library'
-       severity: 'HIGH,CRITICAL'
+      with:
+        image-ref: ${{ env.IMAGE_NAME }}:latest
+        format: 'table'
+        # exit-code: '1'  # ligne optionnelle si tu ne veux pas échouer le job en cas de vulnérabilités
+        ignore-unfixed: true
+        vuln-type: 'os,library'
+        severity: 'HIGH,CRITICAL'
 
     - name: 📦 Push vers Docker Hub
       run: docker push $IMAGE_NAME:latest
+
+
 
