--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,14 +42,15 @@ jobs:
       run: docker build -t $IMAGE_NAME:latest .
     
     - name: 🔍 Scan de sécurité avec Trivy
-      uses: aquasecurity/trivy-action@master
-      with:
-        image-ref: ${{ env.IMAGE_NAME }}:latest
-        format: 'table'
-        # exit-code: '1'  # décommente cette ligne si tu veux que le job échoue en cas de vulnérabilités
-        ignore-unfixed: true
-        vuln-type: 'os,library'
-        severity: 'HIGH,CRITICAL'
+        uses: aquasecurity/trivy-action@master
+        with:
+          image-ref: ${{ env.IMAGE_NAME }}:latest
+          format: 'table'
+          exit-code: '1'
+          ignore-unfixed: true
+          vuln-type: 'os,library'
+          severity: 'HIGH,CRITICAL'
+
 
 
     - name: 📦 Push vers Docker Hub
