--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,12 +45,13 @@ jobs:
     - name: 🔍 Scan de sécurité avec Trivy
       uses: aquasecurity/trivy-action@master
       with:
-        image-ref: ${{ env.IMAGE_NAME }}:latest
-        format: 'table'
-        exit-code: '1'  # décommente cette ligne si tu veux échouer le job en cas de vulnérabilités
-        ignore-unfixed: true
-        vuln-type: 'os,library'
-        severity: 'HIGH,CRITICAL'
+       image-ref: ${{ env.IMAGE_NAME }}:latest
+       format: 'table'
+       exit-code: '1'  # décommente si tu veux échouer le job si vulnérabilités
+       ignore-unfixed: true
+       vuln-type: 'os,library'
+       severity: 'HIGH,CRITICAL'
+
 
 
 
