--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,6 +52,8 @@ jobs:
         vuln-type: 'os,library'
         severity: 'HIGH,CRITICAL'
 
+    - name: 🔐 Login Docker Hub
+      run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
 
     - name: 📦 Push vers Docker Hub
       run: docker push $IMAGE_NAME:latest
