--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -58,5 +58,21 @@ jobs:
     - name: 📦 Push vers Docker Hub
       run: docker push $IMAGE_NAME:latest
 
+      deploy:
+      needs: build
+      runs-on: ubuntu-latest
+
+      steps:
+    - name: 📦 Déploiement via SSH
+      uses: appleboy/ssh-action@master
+      with:
+        host: ${{ secrets.VM_HOST }}
+        username: ${{ secrets.VM_USER }}
+        key: ${{ secrets.VM_SSH_KEY }}
+        script: |
+          docker pull ahmedschheider/ci-demo:latest
+          docker stop hello-twiti || true && docker rm hello-twiti || true
+          docker run -d --name hello-twiti -p 8081:8080 ahmedschheider/ci-demo:latest
+
 
 
