--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -58,21 +58,29 @@ jobs:
     - name: 📦 Push vers Docker Hub
       run: docker push $IMAGE_NAME:latest
 
-      deploy:
-      needs: build
-      runs-on: ubuntu-latest
+       deploy:
+    name: 🚀 Déploiement sur la VM
+    runs-on: ubuntu-latest
+    needs: build
 
-      steps:
-    - name: 📦 Déploiement via SSH
-      uses: appleboy/ssh-action@master
-      with:
-        host: ${{ secrets.VM_HOST }}
-        username: ${{ secrets.VM_USER }}
-        key: ${{ secrets.VM_SSH_KEY }}
-        script: |
+    steps:
+    - name: 📥 Télécharger le dépôt
+      uses: actions/checkout@v3
+
+    - name: 📄 Sauvegarder la clé SSH privée
+      run: |
+        echo "${{ secrets.VM_SSH_KEY }}" > id_rsa
+        chmod 600 id_rsa
+
+    - name: 🐳 Lancer le conteneur sur la VM via SSH
+      run: |
+        ssh -o StrictHostKeyChecking=no -i id_rsa ${{ secrets.VM_USER }}@${{ secrets.VM_HOST }} << 'EOF'
           docker pull ahmedschheider/ci-demo:latest
-          docker stop hello-twiti || true && docker rm hello-twiti || true
-          docker run -d --name hello-twiti -p 8081:8080 ahmedschheider/ci-demo:latest
+          docker stop springboot-app || true
+          docker rm springboot-app || true
+          docker run -d --name springboot-app -p 8081:8080 ahmedschheider/ci-demo:latest
+        EOF
+
 
 
 
