--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,15 +17,6 @@ jobs:
     - name: 🔄 Cloner le code
       uses: actions/checkout@v3
 
-    - name: ⚙️ Set up Docker Buildx
-      uses: docker/setup-buildx-action@v3
-
-    - name: 🔐 Se connecter à Docker Hub
-      uses: docker/login-action@v3
-      with:
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_TOKEN }}
-
     - name: Set up JDK 21
       uses: actions/setup-java@v3
       with:
@@ -38,8 +29,17 @@ jobs:
     - name: 🧪 Build du projet avec Maven
       run: ./mvnw clean package -DskipTests
 
+    - name: ⚙️ Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
+
+    - name: 🔐 Se connecter à Docker Hub
+      uses: docker/login-action@v3
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
+
     - name: 🛠️ Build de l’image Docker
-      run: docker build -t $IMAGE_NAME:latest .
+      run: docker build -t ${{ env.IMAGE_NAME }}:latest .
 
     - name: 🔍 Scan de sécurité avec Trivy
       uses: aquasecurity/trivy-action@master
@@ -50,12 +50,6 @@ jobs:
         vuln-type: 'os,library'
         severity: 'HIGH,CRITICAL'
 
-    - name: 🔐 Login to Docker Hub
-      run: echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
-
     - name: 📦 Push vers Docker Hub
-      run: docker push $IMAGE_NAME:latest
-
- 
-
+      run: docker push ${{ env.IMAGE_NAME }}:latest
 
