--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,7 +5,7 @@ on:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
-    
+
 env:
   IMAGE_NAME: ahmedschheider/ci-demo
 
@@ -26,11 +26,12 @@ jobs:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-    - name: Set up JDK 21
+    - name: Set up JDK 17
       uses: actions/setup-java@v3
       with:
         distribution: temurin
-        java-version: '21'
+        java-version: '17'
+        cache: maven
 
     - name: 🔧 Rendre mvnw exécutable
       run: chmod +x mvnw
@@ -40,14 +41,12 @@ jobs:
 
     - name: 🛠️ Build de l’image Docker
       run: docker build -t $IMAGE_NAME:latest .
-      
-       
+
     - name: 🔍 Scan de sécurité avec Trivy
       uses: aquasecurity/trivy-action@master
       with:
         image-ref: ${{ env.IMAGE_NAME }}:latest
         format: 'table'
-        # exit-code: '1'  # <--- COMMENTÉ = le job ne plante plus
         ignore-unfixed: true
         vuln-type: 'os,library'
         severity: 'HIGH,CRITICAL'
