--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,7 +5,7 @@ on:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
-
+    
 env:
   IMAGE_NAME: ahmedschheider/ci-demo
 
@@ -26,12 +26,11 @@ jobs:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-    - name: Set up JDK 17
+    - name: Set up JDK 21
       uses: actions/setup-java@v3
       with:
         distribution: temurin
-        java-version: '17'
-        cache: maven
+        java-version: '21'
 
     - name: 🔧 Rendre mvnw exécutable
       run: chmod +x mvnw
@@ -41,12 +40,14 @@ jobs:
 
     - name: 🛠️ Build de l’image Docker
       run: docker build -t $IMAGE_NAME:latest .
-
+      
+       
     - name: 🔍 Scan de sécurité avec Trivy
       uses: aquasecurity/trivy-action@master
       with:
         image-ref: ${{ env.IMAGE_NAME }}:latest
         format: 'table'
+        # exit-code: '1'  # <--- COMMENTÉ = le job ne plante plus
         ignore-unfixed: true
         vuln-type: 'os,library'
         severity: 'HIGH,CRITICAL'
