--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -57,15 +57,16 @@ jobs:
         run: docker push $IMAGE_NAME:latest
 
   deploy:
-    runs-on: ubuntu-latest
-    steps:
-      - name: SSH Deploy
-        uses: appleboy/ssh-action@v0.1.7
-        with:
-          host: ${{ secrets.VM_IP }}
-          username: ${{ secrets.VM_USER }}
-          key: ${{ secrets.VM_SSH_KEY }}
-          script: |
-            cd /home/ubuntu/app
-            git pull
-            ./deploy.sh
+  runs-on: ubuntu-latest
+  steps:
+    - name: SSH Deploy
+      uses: appleboy/ssh-action@v0.1.7
+      with:
+        host: ${{ secrets.VM_IP }}         # 192.168.0.9 dans ton cas
+        username: ahmed
+        key: ${{ secrets.VM_SSH_KEY }}
+        script: |
+          cd /home/ahmed/app
+          git pull
+          ./deploy.sh
+
